fixed jumping menu

--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,21 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 1100px;
-}
-
-.menu {
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   margin-top: 50px;
   background-color: #333333;
   border-bottom: 5px solid #00a9ff;
 }
 
+.container {
+  margin: 0 auto;
+  max-width: 1100px;
+}
 
 .menu-list {
   display: flex;
